# tg-anonymizer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
resources/: tg-anonymizer.desktop
src/: anonymizer.rs  gui.rs  main.rs  theme.rs
