[package]
name = "tg-anonymizer"
version = "0.2.1"
edition = "2021"
description = "Converts Telegram HTML chat exports to anonymized Markdown files"
authors = ["Meo Tech"]
license = "GPL-3.0"
repository = "https://github.com/meoteq/tg-anonymizer"
keywords = ["telegram", "anonymizer", "html", "markdown", "privacy"]
categories = ["command-line-utilities"]

[dependencies]
eframe = "0.30.0"
scraper = "0.19.0"
ego-tree = "0.6.3"
regex = "1.10.3"
rfd = "0.14.1"
once_cell = "1.19.0"
egui_material_icons = "0.2.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }

[profile.release]
lto = true
strip = true
